--- a/nms/nms/custom/project.json
+++ b/nms/nms/custom/project.json
@@ -25,7 +25,7 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 9,
+   "idx": 10,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
@@ -89,7 +89,7 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 16,
+   "idx": 17,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
@@ -203,6 +203,70 @@
    "collapsible": 0,
    "collapsible_depends_on": null,
    "columns": 0,
+   "creation": "2024-11-20 23:19:11.765800",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_quotation",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 3,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "custom_lead",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "Quotation",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-11-20 23:19:11.765800",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_quotation",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": "Quotation",
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "collapsible_depends_on": null,
+   "columns": 0,
    "creation": "2024-10-16 20:38:04.454892",
    "default": null,
    "depends_on": null,
@@ -270,7 +334,7 @@
    "is_child_table": 0,
    "link_doctype": "Lead",
    "link_fieldname": "custom_project",
-   "modified": "2024-11-19 20:00:26.501262",
+   "modified": "2024-11-20 23:19:11.617162",
    "modified_by": "Administrator",
    "name": "sigplrr6vo",
    "owner": "Administrator",
@@ -290,7 +354,7 @@
    "is_child_table": 0,
    "link_doctype": "Estimation",
    "link_fieldname": "project",
-   "modified": "2024-11-19 20:00:26.521813",
+   "modified": "2024-11-20 23:19:11.651408",
    "modified_by": "Administrator",
    "name": "sigptggov7",
    "owner": "Administrator",
@@ -307,7 +371,7 @@
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-11-19 20:00:26.400725",
+   "creation": "2024-11-20 23:19:11.482371",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -315,7 +379,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-11-19 20:00:26.400725",
+   "modified": "2024-11-20 23:19:11.482371",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-field_order",
@@ -323,14 +387,14 @@
    "property": "field_order",
    "property_type": "Data",
    "row_name": null,
-   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"cost_center\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
+   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"cost_center\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
   },
   {
    "_assign": null,
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-11-19 20:00:26.531715",
+   "creation": "2024-11-20 23:19:11.666300",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -338,7 +402,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-11-19 20:00:26.531715",
+   "modified": "2024-11-20 23:19:11.666300",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-links_order",
