--- a/nms/nms/custom/project.json
+++ b/nms/nms/custom/project.json
@@ -8,6 +8,70 @@
    "allow_in_quick_entry": 0,
    "allow_on_submit": 0,
    "bold": 0,
+   "collapsible": 1,
+   "collapsible_depends_on": null,
+   "columns": 0,
+   "creation": "2024-12-09 23:01:38.374096",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_accounting_dimensions",
+   "fieldtype": "Section Break",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 18,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "custom_body",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "Accounting Dimensions",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-12-09 23:01:38.374096",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_accounting_dimensions",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": null,
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
    "collapsible": 0,
    "collapsible_depends_on": null,
    "columns": 0,
@@ -139,6 +203,198 @@
    "collapsible": 0,
    "collapsible_depends_on": null,
    "columns": 0,
+   "creation": "2024-12-09 23:01:38.606453",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_client",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 19,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "custom_accounting_dimensions",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "Client",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-12-09 23:01:38.606453",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_client",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": "Customer",
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "collapsible_depends_on": null,
+   "columns": 0,
+   "creation": "2024-12-09 23:01:38.826841",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_column_break_keeip",
+   "fieldtype": "Column Break",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 21,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "cost_center",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-12-09 23:01:38.826841",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_column_break_keeip",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": null,
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "collapsible_depends_on": null,
+   "columns": 0,
+   "creation": "2024-12-09 23:01:39.270137",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_contract_type",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 23,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "custom_project",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "Contract Type",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-12-09 23:01:39.270137",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_contract_type",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": "Contract Type",
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "collapsible_depends_on": null,
+   "columns": 0,
    "creation": "2024-11-19 19:56:05.498226",
    "default": null,
    "depends_on": null,
@@ -203,6 +459,70 @@
    "collapsible": 0,
    "collapsible_depends_on": null,
    "columns": 0,
+   "creation": "2024-12-09 23:01:39.045424",
+   "default": null,
+   "depends_on": null,
+   "description": null,
+   "docstatus": 0,
+   "dt": "Project",
+   "fetch_from": null,
+   "fetch_if_empty": 0,
+   "fieldname": "custom_project",
+   "fieldtype": "Link",
+   "hidden": 0,
+   "hide_border": 0,
+   "hide_days": 0,
+   "hide_seconds": 0,
+   "idx": 22,
+   "ignore_user_permissions": 0,
+   "ignore_xss_filter": 0,
+   "in_global_search": 0,
+   "in_list_view": 0,
+   "in_preview": 0,
+   "in_standard_filter": 0,
+   "insert_after": "custom_column_break_keeip",
+   "is_system_generated": 0,
+   "is_virtual": 0,
+   "label": "Project",
+   "length": 0,
+   "link_filters": null,
+   "mandatory_depends_on": null,
+   "modified": "2024-12-09 23:01:39.045424",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-custom_project",
+   "no_copy": 0,
+   "non_negative": 0,
+   "options": "Project",
+   "owner": "Administrator",
+   "permlevel": 0,
+   "placeholder": null,
+   "precision": "",
+   "print_hide": 0,
+   "print_hide_if_no_value": 0,
+   "print_width": null,
+   "read_only": 0,
+   "read_only_depends_on": null,
+   "report_hide": 0,
+   "reqd": 0,
+   "search_index": 0,
+   "show_dashboard": 0,
+   "sort_options": 0,
+   "translatable": 0,
+   "unique": 0,
+   "width": null
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "allow_in_quick_entry": 0,
+   "allow_on_submit": 0,
+   "bold": 0,
+   "collapsible": 0,
+   "collapsible_depends_on": null,
+   "columns": 0,
    "creation": "2024-11-20 23:19:11.765800",
    "default": null,
    "depends_on": null,
@@ -217,7 +537,7 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 3,
+   "idx": 4,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
@@ -334,7 +654,7 @@
    "is_child_table": 0,
    "link_doctype": "Lead",
    "link_fieldname": "custom_project",
-   "modified": "2024-11-20 23:19:11.617162",
+   "modified": "2024-12-09 23:03:14.005196",
    "modified_by": "Administrator",
    "name": "sigplrr6vo",
    "owner": "Administrator",
@@ -354,7 +674,7 @@
    "is_child_table": 0,
    "link_doctype": "Estimation",
    "link_fieldname": "project",
-   "modified": "2024-11-20 23:19:11.651408",
+   "modified": "2024-12-09 23:03:14.029694",
    "modified_by": "Administrator",
    "name": "sigptggov7",
    "owner": "Administrator",
@@ -371,7 +691,30 @@
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-11-20 23:19:11.482371",
+   "creation": "2024-12-09 23:01:38.093794",
+   "default_value": null,
+   "doc_type": "Project",
+   "docstatus": 0,
+   "doctype_or_field": "DocField",
+   "field_name": "cost_center",
+   "idx": 0,
+   "is_system_generated": 0,
+   "modified": "2024-12-09 23:01:38.093794",
+   "modified_by": "Administrator",
+   "module": null,
+   "name": "Project-cost_center-label",
+   "owner": "Administrator",
+   "property": "label",
+   "property_type": "Data",
+   "row_name": null,
+   "value": " Cost Center"
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "creation": "2024-12-09 23:03:13.789872",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -379,7 +722,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-11-20 23:19:11.482371",
+   "modified": "2024-12-09 23:03:13.789872",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-field_order",
@@ -387,14 +730,14 @@
    "property": "field_order",
    "property_type": "Data",
    "row_name": null,
-   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"cost_center\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
+   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"custom_quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"custom_accounting_dimensions\", \"custom_client\", \"cost_center\", \"custom_column_break_keeip\", \"custom_project\", \"custom_contract_type\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
   },
   {
    "_assign": null,
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-11-20 23:19:11.666300",
+   "creation": "2024-12-09 23:03:14.056567",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -402,7 +745,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-11-20 23:19:11.666300",
+   "modified": "2024-12-09 23:03:14.056567",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-links_order",
