--- a/nms/nms/custom/project.json
+++ b/nms/nms/custom/project.json
@@ -224,7 +224,7 @@
    "in_list_view": 0,
    "in_preview": 0,
    "in_standard_filter": 0,
-   "insert_after": "custom_accounting_dimensions",
+   "insert_after": "cost_center",
    "is_system_generated": 0,
    "is_virtual": 0,
    "label": "Client",
@@ -281,14 +281,14 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 21,
+   "idx": 20,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
    "in_list_view": 0,
    "in_preview": 0,
    "in_standard_filter": 0,
-   "insert_after": "cost_center",
+   "insert_after": "custom_client",
    "is_system_generated": 0,
    "is_virtual": 0,
    "label": "",
@@ -345,14 +345,14 @@
    "hide_border": 0,
    "hide_days": 0,
    "hide_seconds": 0,
-   "idx": 23,
+   "idx": 21,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
    "in_list_view": 0,
    "in_preview": 0,
    "in_standard_filter": 0,
-   "insert_after": "custom_project",
+   "insert_after": "custom_column_break_keeip",
    "is_system_generated": 0,
    "is_virtual": 0,
    "label": "Contract Type",
@@ -480,7 +480,7 @@
    "in_list_view": 0,
    "in_preview": 0,
    "in_standard_filter": 0,
-   "insert_after": "custom_column_break_keeip",
+   "insert_after": "custom_contract_type",
    "is_system_generated": 0,
    "is_virtual": 0,
    "label": "Project",
@@ -654,7 +654,7 @@
    "is_child_table": 0,
    "link_doctype": "Lead",
    "link_fieldname": "custom_project",
-   "modified": "2024-12-09 23:03:14.005196",
+   "modified": "2024-12-27 00:53:12.221116",
    "modified_by": "Administrator",
    "name": "sigplrr6vo",
    "owner": "Administrator",
@@ -674,7 +674,7 @@
    "is_child_table": 0,
    "link_doctype": "Estimation",
    "link_fieldname": "project",
-   "modified": "2024-12-09 23:03:14.029694",
+   "modified": "2024-12-27 00:53:12.244290",
    "modified_by": "Administrator",
    "name": "sigptggov7",
    "owner": "Administrator",
@@ -714,7 +714,7 @@
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-12-09 23:03:13.789872",
+   "creation": "2024-12-27 00:53:12.078705",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -722,7 +722,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-12-10 14:45:14.023608",
+   "modified": "2024-12-27 00:53:12.078705",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-field_order",
@@ -730,14 +730,14 @@
    "property": "field_order",
    "property_type": "Data",
    "row_name": null,
-   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"custom_quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"custom_accounting_dimensions\", \"custom_client\", \"cost_center\", \"custom_column_break_keeip\", \"custom_project\", \"custom_contract_type\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
+   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"custom_quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"custom_accounting_dimensions\", \"cost_center\", \"custom_client\", \"custom_column_break_keeip\", \"custom_contract_type\", \"custom_project\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
   },
   {
    "_assign": null,
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
-   "creation": "2024-12-09 23:03:14.056567",
+   "creation": "2024-12-27 00:53:12.257688",
    "default_value": null,
    "doc_type": "Project",
    "docstatus": 0,
@@ -745,7 +745,7 @@
    "field_name": null,
    "idx": 0,
    "is_system_generated": 0,
-   "modified": "2024-12-10 14:45:14.042611",
+   "modified": "2024-12-27 00:53:12.257688",
    "modified_by": "Administrator",
    "module": null,
    "name": "Project-main-links_order",
