--- a/nms/nms/custom/project.json
+++ b/nms/nms/custom/project.json
@@ -575,70 +575,6 @@
    "translatable": 0,
    "unique": 0,
    "width": null
-  },
-  {
-   "_assign": null,
-   "_comments": null,
-   "_liked_by": null,
-   "_user_tags": null,
-   "allow_in_quick_entry": 0,
-   "allow_on_submit": 0,
-   "bold": 0,
-   "collapsible": 0,
-   "collapsible_depends_on": null,
-   "columns": 0,
-   "creation": "2024-10-16 20:38:04.454892",
-   "default": null,
-   "depends_on": null,
-   "description": null,
-   "docstatus": 0,
-   "dt": "Project",
-   "fetch_from": null,
-   "fetch_if_empty": 0,
-   "fieldname": "total_expense_claim",
-   "fieldtype": "Currency",
-   "hidden": 0,
-   "hide_border": 0,
-   "hide_days": 0,
-   "hide_seconds": 0,
-   "idx": 0,
-   "ignore_user_permissions": 0,
-   "ignore_xss_filter": 0,
-   "in_global_search": 0,
-   "in_list_view": 0,
-   "in_preview": 0,
-   "in_standard_filter": 0,
-   "insert_after": "total_costing_amount",
-   "is_system_generated": 1,
-   "is_virtual": 0,
-   "label": "Total Expense Claim (via Expense Claims)",
-   "length": 0,
-   "link_filters": null,
-   "mandatory_depends_on": null,
-   "modified": "2024-10-16 20:38:04.454892",
-   "modified_by": "Administrator",
-   "module": null,
-   "name": "Project-total_expense_claim",
-   "no_copy": 0,
-   "non_negative": 0,
-   "options": null,
-   "owner": "Administrator",
-   "permlevel": 0,
-   "placeholder": null,
-   "precision": "",
-   "print_hide": 0,
-   "print_hide_if_no_value": 0,
-   "print_width": null,
-   "read_only": 1,
-   "read_only_depends_on": null,
-   "report_hide": 0,
-   "reqd": 0,
-   "search_index": 0,
-   "show_dashboard": 0,
-   "sort_options": 0,
-   "translatable": 0,
-   "unique": 0,
-   "width": null
   }
  ],
  "custom_perms": [],
@@ -730,7 +666,7 @@
    "property": "field_order",
    "property_type": "Data",
    "row_name": null,
-   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"custom_quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"custom_accounting_dimensions\", \"cost_center\", \"custom_client\", \"custom_column_break_keeip\", \"custom_contract_type\", \"custom_project\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_expense_claim\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
+   "value": "[\"naming_series\", \"project_name\", \"custom_lead\", \"custom_quotation\", \"status\", \"project_type\", \"is_active\", \"percent_complete_method\", \"percent_complete\", \"custom_attach\", \"column_break_5\", \"project_template\", \"expected_start_date\", \"expected_end_date\", \"priority\", \"department\", \"custom_body\", \"custom_accounting_dimensions\", \"cost_center\", \"custom_client\", \"custom_column_break_keeip\", \"custom_contract_type\", \"custom_project\", \"customer_details\", \"customer\", \"column_break_14\", \"sales_order\", \"users_section\", \"users\", \"copied_from\", \"section_break0\", \"notes\", \"section_break_18\", \"actual_start_date\", \"actual_time\", \"column_break_20\", \"actual_end_date\", \"project_details\", \"estimated_costing\", \"total_costing_amount\", \"total_purchase_cost\", \"company\", \"column_break_28\", \"total_sales_amount\", \"total_billable_amount\", \"total_billed_amount\", \"total_consumed_material_cost\", \"margin\", \"gross_margin\", \"column_break_37\", \"per_gross_margin\", \"monitor_progress\", \"collect_progress\", \"holiday_list\", \"frequency\", \"from_time\", \"to_time\", \"first_email\", \"second_email\", \"daily_time_to_send\", \"day_to_send\", \"weekly_time_to_send\", \"column_break_45\", \"message\"]"
   },
   {
    "_assign": null,
